--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,14 +9,14 @@
     <body>
         
        <!-- <p th:text="${mensaje}"></p> --> 
-       <h1>Un cliente</h1>
-       <p>Nombre: <span th:text="${cliente.nombre}"></span></p>
+       <h1>Listado de clientes</h1>
+       <!-- comment <p>Nombre: <span th:text="${cliente.nombre}"></span></p>
        <p>Apellidos: <span th:text="${cliente.apellidos}"></span></p>
        <p>Correo: <span th:text="${cliente.correo}"></span></p>
-       <p>Telefono: <span th:text="${cliente.telefono}"></span></p>
-       
-       <br/>
-       <br/>
+       <p>Telefono: <span th:text="${cliente.telefono}"></span></p> -->
+       </br>
+       </br>
+       <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>
        <br/>
        <br/>
         <div th:if="${clientes != null and !clientes.empty}">
@@ -27,6 +27,8 @@
                    <th>Apellidos</th>
                    <th>Correo</th>
                    <th>Telefono</th>
+                   <th>Modificar</th>
+                   <th>Eliminar</th>
                </tr>
            </thead>
            <tbody>
@@ -35,12 +37,14 @@
                    <td th:text="${item.apellidos}"></td>
                    <td th:text="${item.correo}"></td>
                    <td th:text="${item.telefono}"></td>
+                   <td> <a th:href="@{/modificarCliente/} +  ${item.idCliente}">Modificar</a></td>
+                   <td> <a th:href="@{/eliminarCliente/} +  ${item.idCliente}">Eliminar</a></td>
                </tr>
            </tbody>
        </table>
     </div>
        <div th:if="${clientes = null or clientes.empty}">
-           LA lista de clientes esta vacia
+           La lista de clientes esta vacia
        </div>
     </body>
 </html>
