--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,46 +5,45 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="@{css/menu.css}" rel="stylesheet" type="text/css/">
     </head>
     <body>
-        
+        <div class="contenido">
+            <h2>Nuestros articulos</h2>
        <!-- <p th:text="${mensaje}"></p> --> 
-       <h1>Listado de clientes</h1>
-       <!-- comment <p>Nombre: <span th:text="${cliente.nombre}"></span></p>
-       <p>Apellidos: <span th:text="${cliente.apellidos}"></span></p>
-       <p>Correo: <span th:text="${cliente.correo}"></span></p>
-       <p>Telefono: <span th:text="${cliente.telefono}"></span></p> -->
+       <h1>Listado de articulos</h1>
+       <!-- comment <p>Nombre: <span th:text="${articulo.nombre}"></span></p>
+       <p>Apellidos: <span th:text="${articulo.apellidos}"></span></p>
+       <p>Correo: <span th:text="${articulo.correo}"></span></p>
+       <p>Telefono: <span th:text="${articulo.telefono}"></span></p> -->
        </br>
        </br>
-       <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>
+       <a th:href="@{/nuevoArticulo}">Nuevo Articulo</a>
        <br/>
        <br/>
-        <div th:if="${clientes != null and !clientes.empty}">
+        <div th:if="${articulos != null and !articulos.empty}">
        <table border="1">
            <thead>
                <tr>
-                   <th>Nombre</th>
-                   <th>Apellidos</th>
-                   <th>Correo</th>
-                   <th>Telefono</th>
-                   <th>Modificar</th>
-                   <th>Eliminar</th>
+                   <th>Descripcion</th>
+                   <th>Precio</th>
+                  
                </tr>
            </thead>
            <tbody>
-               <tr th:each="item : ${clientes}" >
-                   <td th:text="${item.nombre}"></td>
-                   <td th:text="${item.apellidos}"></td>
-                   <td th:text="${item.correo}"></td>
-                   <td th:text="${item.telefono}"></td>
-                   <td> <a th:href="@{/modificarCliente/} +  ${item.idCliente}">Modificar</a></td>
-                   <td> <a th:href="@{/eliminarCliente/} +  ${item.idCliente}">Eliminar</a></td>
+               <tr th:each="item : ${articulos}" >
+                   <td th:text="${item.descripcion}"></td>
+                   <td th:text="${#numbers.formatDecimal(item.precio, 3, 2)}"></td>
+                
+                   <td> <a th:href="@{/carrito/agregar/} +  ${item.idArticulo}">Agregar</a></td>
+          
                </tr>
            </tbody>
        </table>
     </div>
-       <div th:if="${clientes = null or clientes.empty}">
-           La lista de clientes esta vacia
+       <div th:if="${articulos = null or articulos.empty}">
+           La lista de articulos esta vacia
+       </div>
        </div>
     </body>
 </html>
