--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -6,6 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+       <header th:replace="layout/plantilla :: header"/>
+       
+        <div class="contenido">
+            <h2>Datos de la categoria</h2>
+            <a th:href="@{/categoria/listado}">Regresar</a>
+            <br>
+            <br>
+            <form th:action="@{/categoria/listado}"
+                  method="post"
+                  th:object="${/categoria}">
+                <input type="hidden" name="idCategoria" th:field="*{idCategoria}" />
+                <label for="descripcion">Descripcion: </label>
+                
+                <input type="text" name="descripcion" th:field="*{descripcion}" />
+                </br>
+                <label for="activo">Activo: </label>
+                <input type="chechbox" name="activo" th:field="*{activo}" />
+                </br>
+                <input type="submit" name="Guardar" value="Guardar" />
+            </form>
+       
+       <footer th:replace="layout/plantilla :: footer" />
     </body>
 </html>
