--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -7,12 +7,26 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
+          <link href="@{css/menu.css}" rel="stylesheet" type="text/css/">
     </head>
     <body>
-        <header th:fragment="header">
-            <h1>TechShop</h1>
+        <header th:fragment="header" class="header">
+            <nav class="nav">
+                <a th:ref="@{/}" class="logo nav-link">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item">
+                        <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link">Clientes</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link">Categorias</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link">Articulos</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
-        <footer th:fragment="footer">
+        <footer th:fragment="footer" class="footer">
             <p>&COPY; Derechos reservados 2022</p>
         </footer>
             
