--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -3,7 +3,8 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
@@ -13,23 +14,32 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <header th:fragment="header" class="header">
             <nav class="nav">
                 <a th:ref="@{/}" class="logo nav-link">TechShop</a>
-                <ul class="nav-menu">
+                <ul class="nav-menu" sec:authorize="hasRole('ROLE_VENDEDOR')">
                     <li class="nav-menu-item">
-                        <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link">Clientes</a>
+                        <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.clientes}">Clientes</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link">Categorias</a>
+                        <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.categorias}">Categorias</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link">Articulos</a>
+                        <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.articulos}">Articulos</a>
+                    </li>
+                    <li class="nav-menu-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a th:href="@{/admin/usuarios}" class="nav-menu-link nav-link">Usuarios</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <footer th:fragment="footer" class="footer">
-            <p>&COPY; Derechos reservados 2022</p>
+            <div>
+                &COPY; [[#{plantilla.derechos}]]
+                <a th:href="@{/(lang=es)}">ES</a>
+                <a th:href="@{/(lang=en)}">EN</a>
+                <form method="post" th:action="@{/logout}" style="display: inline">
+                    <a href="#" onclick="this.parentNode.submit();">Logout</a>
+                </form>
+            </div>
         </footer>
             
-        </footer>
     </body>
 </html>
